--- a/pim-tool-back/pom.xml
+++ b/pim-tool-back/pom.xml
@@ -95,6 +95,12 @@
 
     <!-- Package as an executable jar -->
     <build>
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
