--- a/pim-tool-front/package.json
+++ b/pim-tool-front/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.9.1",
     "moment": "^2.29.4",
